tests/models/enum/named/bool/fail/min_length.stderr
error: Support condition is alias, default and validate
 --> tests/models/enum/named/bool/fail/min_length.rs:6:9
  |
6 |         value: bool
  |         ^^^^^
